K8S/platforms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: platforms-deployment
spec:
  replicas: 1 # the q'ty of running instance >> horizontal scale up
  selector: 
    matchLabels:
      app: platformservice
  template: # define pod
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: odilov/platformservice:latest
