K8S/commands-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: commands-deployment
spec:
  replicas: 1 # the q'ty of running instance >> horizontal scale up
  selector: 
    matchLabels:
      app: commandservice
  template: # define pod
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: odilov/commandservice:latest
--- # separate  the deployment from the cluster ip config
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-service
spec:
  type: ClusterIP
  selector: 
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 80
