K8S/ingress-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-router
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: kubernetes.local
      http: 
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend: 
              service:
                name: platforms-clusterip-service
                port: 
                  number: 80
          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: command-clusterip-service
                port:
                  number: 80
